Bug 1754781 - Change the Android JVM thread id to 1 r=gerald

Differential Revision: https://phabricator.services.mozilla.com/D138769